add user interact logic